# python-testing-pytest

./: .gitignore  Intro to Testing, Pytest.ipynb  coverage.xml  environment.yml  pyproject.toml
examples/: event_list.py  event_service.py
test/: test_event_list.py  test_event_service.py  test_fixture.py  test_pow.py
