[tool.poetry]
name = "python-testing-pytest"
version = "0.1.0"
description = "GHSC HazDev Summer Python Series : Intro to Testing/Pytest"
authors = ["Jeremy Fee <jmfee@usgs.gov>"]

[tool.poetry.dependencies]
python = "^3.7,<3.10"
jupyter = "^1.0.0"
numpy = "^1.21.2"
ipytest = "^0.11.0"
pydantic = "^1.8.2"
requests = "^2.26.0"
types-requests = "^2.25.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
